# p2p-localnet-chat

./: Cargo.toml  PRD.md  README.md  TESTING.md
src/: config.rs  main.rs
src/message/: handler.rs  mod.rs  types.rs
src/network/: discovery.rs  mod.rs  peer.rs  protocol.rs
src/ui/: app.rs  mod.rs  terminal.rs
